styled the buttons, 50% success, font styling is not working

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <title>Vite + TS</title>
-<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="src/style.css">
   </head>
   <body>
@@ -28,7 +28,7 @@
     </header>
     
     <main>
-<section>
+<section class="padding-block-900">
   <div class="container">
     <div class="even-columns">
       <div>
@@ -44,7 +44,7 @@
     </div>
   </div>
 </section>
-<section>
+<section class="padding-block-900">
   <div class="container">
     <div class="even-columns">
       <div>
@@ -68,24 +68,24 @@
     </div>
   </div>
 </section>
-<section class="carousel">
-  <h2 class="fs-secondary-heading">What they've said</h2>
+<section class="carousel | padding-block-700">
+  <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
   <!-- carousel here -->
   <button class="button">Get Started</button>
 </section>
 
-<section class="cta | bg-accent-400 text-neutral-100">
+<section class="cta | padding-block-700 bg-accent-400 text-neutral-100">
   <div class="container">
     <div class="even-columms">
-
-      <div><p class="fs-secondary-heading fw-bold">What they’ve said</p>
+      <div>
+        <p class="fs-secondary-heading fw-bold">Simplify how your team works today.</p>
       </div>
       <div><button class="button" data-type="inverted">Get Started</button></div>
     </div>
   </div>
 </section>
     </main>
-    <footer class="bg-neutral-900 text-neutral-100">
+    <footer class="padding-block-700 | bg-neutral-900 text-neutral-100">
 <div class="container">
   <div class="even-columns">
     <div>
