--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 <title>Vite + TS</title>
     <link rel="stylesheet" href="src/style.css">
   </head>
+
   <body>
     <header class="primary-header">
 <div class="container"> 
+  <div class="nav-wrapper">
   <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/logo.svg" alt="Logo"></a>
-  <nav class="primary-navigation">
+  <!-- menu button - part four 6m:45s -->
+  <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+    <img class="icon-hamburger" src="images/icon-hamburger.svg" alt="" aria-hidden="true" />
+    <img class="icon-close" src="images/icon-close.svg" alt="" aria-hidden="true" />
+    <span class="visually-hidden">Menu</span>
+  </button>
+  <nav class="primary-navigation" id="primary-navigation">
 <ul aria-label="Primary" role="list" class="nav-list">
   <li><a href="#">Pricing</a></li>
   <li><a href="#">Product</a></li>
@@ -23,7 +31,8 @@
   <li><a href="#">Community</a></li>
 </ul>
   </nav>
-  <button class="button">Get Started</button>
+  <button class="button | display-sm-none display-md-inline-flex" style="display: none">Get Started</button>
+</div>
 </div>
     </header>
     
@@ -36,7 +45,7 @@
           Bring everyone together to build better products.
         </h1>
         <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
-        <button>Get Started</button>
+        <button class="button">Get Started</button>
       </div>  
     <div>
       <img src="images/illustration-intro.svg" alt="">
