background images not working in full screen. Invisible & throwing out the footer when in large size screen Visible in mobile/tablet view

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<title>Vite + TS</title>
+<title>FEM-Tutorial-CSS</title>
     <link rel="stylesheet" href="src/style.css">
   </head>
 
@@ -16,7 +16,7 @@
 <div class="container"> 
   <div class="nav-wrapper">
   <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/logo.svg" alt="Logo"></a>
-  <!-- menu button - part four 6m:45s -->
+  <!-- menu button - part four 6m:45s (Postures?)-->
   <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
     <img class="icon-hamburger" src="images/icon-hamburger.svg" alt="" aria-hidden="true" />
     <img class="icon-close" src="images/icon-close.svg" alt="" aria-hidden="true" />
@@ -53,6 +53,7 @@
     </div>
   </div>
 </section>
+
 <section class="padding-block-900">
   <div class="container">
     <div class="even-columns">
@@ -84,19 +85,21 @@
     </div>
   </div>
 </section>
+
 <section class="carousel | padding-block-700">
   <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
   <!-- carousel here -->
   <button class="button">Get Started</button>
 </section>
 
-<section class="cta | padding-block-700 bg-accent-400 text-neutral-100">
+<section class="cta | padding-block-900 bg-accent-400 text-neutral-100">
   <div class="container">
-    <div class="even-columms">
+    <div class="even-columms vertical-align-center">
       <div>
-        <p class="fs-secondary-heading fw-bold">Simplify how your team works today.</p>
+        <p class="fs-primary-heading fw-bold">Simplify how your team works today.</p>
       </div>
-      <div><button class="button" data-type="inverted">Get Started</button></div>
+      <div class="justify-self-end-md">
+        <button class="button" data-type="inverted">Get Started</button></div>
     </div>
   </div>
 </section>
