social-icons.svg group file

--- a/index.html
+++ b/index.html
@@ -109,24 +109,46 @@
   <div class="even-columns">
     <div>
       <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/logo.svg" alt="Logo"></a>
+
       <ul role="list" aria-label="social links">
-        <li> <a aria-label="facebook" href="#"></a></li>
-        <li> <a aria-label="youtube" href="#"></a></li>
-        <li> <a aria-label="twitter" href="#"></a></li>
-        <li> <a aria-label="pinterest" href="#"></a></li>
-        <li> <a aria-label="instagram" href="#"></a></li>   
+        <li> <a aria-label="facebook" href="#">
+          <svg class="icon">
+            <use xlink:href="images/social-icons.svg#icon-facebook">
+            </svg>
+              </use>
+              </a></li>
+        <li> <a aria-label="youtube" href="#">
+          <svg class="icon">
+            <use xlink:href="#icon-youtube"></use>
+              </svg>
+                </a></li>
+        <li> <a aria-label="twitter" href="#"> 
+          <svg class="icon">
+            <use xlink:href="#icon-twitter"></use>
+              </svg>
+                </a></li>
+        <li><a aria-label="pinterest" href="#">
+          <svg class="icon">
+            <use xlink:href="#icon-pinterest"></use>
+              </svg>
+               </a></li>
+        <li> <a aria-label="instagram" href="#">
+          <svg class="icon">
+            <use xlink:href="#icon-instagram"></use>
+              </svg>
+                </a></li>   
       </ul>
     </div>
     <div>
       <nav class="footer-nav">
         <ul class="flow" style="--flow-spacer: 1.2em" aria-label="Footer" role="list">
-          <li><a href=""></a>Home</li>
-          <li><a href=""></a>Product</li>
-          <li><a href=""></a>Pricing</li>
-          <li><a href=""></a>About Us</li>
-          <li><a href=""></a>Careers</li>
-          <li><a href=""></a>Community</li>
-          <li><a href=""></a>Privacy Policy</li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Product</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Careers</a></li>
+          <li><a href="">Community</a></li>
+          <li><a href="">Privacy Policy</a></li>
         </ul>
       </nav>
     </div>
