--- a/index.html
+++ b/index.html
@@ -108,34 +108,34 @@
 <div class="container">
   <div class="even-columns">
     <div>
-      <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/logo.svg" alt="Logo"></a>
+      <a href="#"><img src="images/logo.svg" alt="Logo"></a>
 
-      <ul role="list" aria-label="social links">
+      <ul class="social-list" role="list" aria-label="social links">
         <li> <a aria-label="facebook" href="#">
-          <svg class="icon">
+          <svg class="social-icon">
             <use xlink:href="images/social-icons.svg#icon-facebook">
             </svg>
               </use>
               </a></li>
         <li> <a aria-label="youtube" href="#">
-          <svg class="icon">
-            <use xlink:href="#icon-youtube"></use>
+          <svg class="social-icon">
+            <use xlink:href="images/social-icons.svg#icon-youtube"></use>
               </svg>
                 </a></li>
         <li> <a aria-label="twitter" href="#"> 
-          <svg class="icon">
-            <use xlink:href="#icon-twitter"></use>
+          <svg class="social-icon">
+            <use xlink:href="images/social-icons.svg#icon-twitter"></use>
               </svg>
                 </a></li>
         <li><a aria-label="pinterest" href="#">
-          <svg class="icon">
-            <use xlink:href="#icon-pinterest"></use>
+          <svg class="social-icon">
+            <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
               </svg>
                </a></li>
         <li> <a aria-label="instagram" href="#">
-          <svg class="icon">
-            <use xlink:href="#icon-instagram"></use>
-              </svg>
+          <svg class="social-icon">
+            <use xlink:href="images/social-icons.svg#icon-instagram"></use>
+          </svg>
                 </a></li>   
       </ul>
     </div>
