--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <header class="primary-header">
 <div class="container"> 
   <div class="nav-wrapper">
-  <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/logo.svg" alt="Logo"></a>
+  <a href="#">
+    <svg class="logo" width="146" height="24">
+      <use xlink:href="images/logo.svg#logo"></use>
+    </svg> 
+      </a>
   <!-- menu button - part four 6m:45s (Postures?)-->
   <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
     <img class="icon-hamburger" src="images/icon-hamburger.svg" alt="" aria-hidden="true" />
@@ -104,11 +108,15 @@
   </div>
 </section>
     </main>
-    <footer class="padding-block-700 | bg-neutral-900 text-neutral-100">
+    <footer class="primary-footer | padding-block-700 | bg-neutral-900 text-neutral-100">
 <div class="container">
-  <div class="even-columns">
-    <div>
-      <a href="#"><img src="images/logo.svg" alt="Logo"></a>
+  <div class="primary-footer-wrapper even-columns">
+    <div class="primary-footer-social-logo">
+      <a href="#" aria-label="home">
+        <svg style="--logo-color: #f7f7f7" class="logo" width="146" height="24">
+          <use xlink:href="images/logo.svg#logo"></use>
+        </svg>  
+      </a>
 
       <ul class="social-list" role="list" aria-label="social links">
         <li> <a aria-label="facebook" href="#">
@@ -139,7 +147,7 @@
                 </a></li>   
       </ul>
     </div>
-    <div>
+    <div class="primary-footer-nav">
       <nav class="footer-nav">
         <ul class="flow" style="--flow-spacer: 1.2em" aria-label="Footer" role="list">
           <li><a href="">Home</a></li>
@@ -152,12 +160,12 @@
         </ul>
       </nav>
     </div>
-    <div>
+    <div class="primary-footer-form">
       <form action="">
         <input type="email">
-        <button class="button">Go</button>
-        <p>Copyright 2020. All Rights Reserved</p>
+        <button class="button" data-shadow="none">Go</button>
       </form>
+      <p>Copyright 2020. All Rights Reserved</p>
     </div>
   </div>
 </div>
