styling on numbered list works @480px wide ONLY...

--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
 <section class="padding-block-900">
   <div class="container">
     <div class="even-columns">
-      <div class="flow">
+      <div class="flow | text-center-sm-only | margin-bottom-700" style="--flow-spacer: 1.5rem">
         <h2 class="fs-secondary-heading fw-bold"> What’s different about Manage? </h2>
         <p>Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams.</p>
       </div>
         <div>
-          <ul role="list" class="numbered-items | flow" role="list">
+          <ul class="numbered-items | flow" role="list">
             <li>
               <div class="flow" style="--flow-spacer: 1.2em">
-                <h3 class="fs-600 fw-bold">Track company-wide progress</h3>
-<p data-width="wide">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
+                <h3 class="numbered-items_title | fs-600 fw-bold">Track company-wide progress</h3>
+<p data-width="numbered-items_body | wide">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
 </div>
             </li>
             <li>
               <div class="flow" style="--flow-spacer: 1.2em">
-              <h3 class="fs-600 fw-bold">Advanced built-in reports</h3>
-<p data-width="wide">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p></div>
+              <h3 class="numbered-items_title | fs-600 fw-bold">Advanced built-in reports</h3>
+<p data-width="numbered-items_body | wide">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p></div>
             </li>
             <li>
               <div class="flow" style="--flow-spacer: 1.2em">
-              <h3 class="fs-600 fw-bold">Everything you need in one place
+              <h3 class="numbered-items_title | fs-600 fw-bold">Everything you need in one place
             </h3>
-<p data-width="wide">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution. </p> </div>
+<p data-width="numbered-items_body | wide">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution. </p> </div>
             </li>
           </ul>
       </div>
@@ -91,7 +91,7 @@
 </section>
 
 <section class="carousel | padding-block-700">
-  <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
+  <h2 class="fs-secondary-heading | fw-bold">What they've said</h2>
   <!-- carousel here -->
   <button class="button">Get Started</button>
 </section>
@@ -110,7 +110,7 @@
     </main>
     <footer class="primary-footer | padding-block-700 | bg-neutral-900 text-neutral-100">
 <div class="container">
-  <div class="primary-footer-wrapper even-columns">
+  <div class="primary-footer-wrapper | even-columns">
     <div class="primary-footer-social-logo">
       <a href="#" aria-label="home">
         <svg style="--logo-color: #f7f7f7" class="logo" width="146" height="24">
