--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" />
+<script src="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.js" defer></script>
+<link rel="stylesheet" href="src/style.css">
 <title>FEM-Tutorial-CSS</title>
-    <link rel="stylesheet" href="src/style.css">
   </head>
 
   <body>
@@ -90,9 +92,39 @@
   </div>
 </section>
 
-<section class="carousel | padding-block-700">
+<section class="carousel | text-center | padding-block-700">
   <h2 class="fs-secondary-heading | fw-bold">What they've said</h2>
   <!-- carousel here -->
+  <ul class="slider">
+      <li>
+        <img src="images/avatar-anisha.png" alt="anisha">
+      <div class="slider-content | flow" data-width="wide" style="--flow-spacer: 1rem">
+          <h3 class="fw-bold">Anisha Li</h3>
+          <p>Manage supercharged out teams workflow. The ability to maintain the visibility on larger milestones at all times keeps everyone motivated.</p>
+      </div>
+      </li>
+      <li>
+      <img src="images/avatar-ali.png" alt="ali">
+      <div class="slider-content | flow" data-width="wide" style="--flow-spacer: 1rem">        
+        <h3 class="fw-bold">Ali Bravo</h3>
+        <p>We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused</p>
+      </div>
+    </li>
+    <li>
+      <img src="images/avatar-richard.png" alt="Richard Watts">
+    <div class="slider-content | flow" data-width="wide"  style="--flow-spacer: 1rem">
+        <h3 class="fw-bold">Richard Watts</h3>
+          <p>Manage allows us to provide structure and pracess. It keeps us organized and focused. I can't stop recommending them to everyone I talk to!</p>
+    </div>
+    </li>
+    <li>
+    <img src="images/avatar-shanai.png" alt="Shanai">
+    <div class="slider-content | flow" data-width="wide" style="--flow-spacer: 1rem">      
+      <h3 class="fw-bold">Shanai Gough</h3>
+      <p>Their software allows us to track, manage & collaborate on our projects from anywhere. It keeps the whole team in sync without being intrusive.</p>
+    </div>
+    </li>
+  </ul>
   <button class="button">Get Started</button>
 </section>
 
@@ -171,5 +203,6 @@
 </div>
     </footer>
     <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
