prep forthe background graphics

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
         <button class="button">Get Started</button>
       </div>  
-    <div>
+    <div class="pill-shaped-image">
       <img src="images/illustration-intro.svg" alt="">
     </div>
     </div>
