found errand "}" everything is the right size

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     
     <main>
-<section class="padding-block-900">
+<section class="pill | text-center-sm-only | padding-block-900">
   <div class="container">
     <div class="even-columns">
       <div class="flow">
@@ -54,7 +54,7 @@
         <button class="button">Get Started</button>
       </div>  
     <div class="pill-shaped-image">
-      <img src="images/illustration-intro.svg" alt="">
+      <img class="mx-auto" src="images/illustration-intro.svg" alt="">
     </div>
     </div>
   </div>
