Sorted out sizing issue with footer icons pill shaped svg resizing and position

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <link rel="stylesheet" href="src/style.css">
 <title>FEM-Tutorial-CSS</title>
   </head>
-
-  <body>
-    <header class="primary-header">
+  
+<body>
+  <header class="primary-header">
 <div class="container"> 
   <div class="nav-wrapper">
   <a href="#">
@@ -24,8 +24,6 @@
       </a>
   <!-- menu button - part four 6m:45s (Postures?)-->
   <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-    <img class="icon-hamburger" src="images/icon-hamburger.svg" alt="" aria-hidden="true" />
-    <img class="icon-close" src="images/icon-close.svg" alt="" aria-hidden="true" />
     <span class="visually-hidden">Menu</span>
   </button>
   <nav class="primary-navigation" id="primary-navigation">
@@ -60,10 +58,10 @@
   </div>
 </section>
 
-<section class="padding-block-900">
+<section class="sales-points | padding-block-900">
   <div class="container">
     <div class="even-columns">
-      <div class="flow | text-center-sm-only | margin-bottom-700" style="--flow-spacer: 1.5rem">
+      <div class="sales-points__pill | flow | text-center-sm-only | margin-bottom-700" style="--flow-spacer: 1.5rem">
         <h2 class="fs-secondary-heading fw-bold"> What’s different about Manage? </h2>
         <p>Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams.</p>
       </div>
